syntax = "proto3";
package proto;
option go_package = "serverApi/pkg/protobuf/live";

// 开播请求信息
message RoomStartBroadcastReq {
  string title = 1; // 直播间标题
  string cover = 2; // 封面图片
  int32  videoClarity = 3; // 视屏清晰度 1- 480p 2-540p 3-720p
  int32  payRules = 4; // 付费规则 1- 免费 2-分钟付费 3-场次付费
  int32  trialDuration = 5; // 试看时长/秒
  int32  unitPrice = 6; // 单价 每分钟单价/每场单价，根据付费规则
  string summary = 7; // 简介
}

// 添加禁言、踢出、黑名单
message RoomOpCreateReq {
  int32  userId = 1;
  int32  roomId = 2;
  int32  muteDuration = 3;
}

// 取消禁言、踢出、黑名单
message RoomOpCancelReq {
  int32 id = 1;
}

// 禁言、踢出、黑名单列表请求
message RoomOpListReq {
  int32  roomId = 1;
  int32  lastId = 2;
  int32  pageSize = 3;
}

message RoomOpListItem {
  int32 id = 1;
  int32 userId = 2;
  string nickname = 3;
  string avatar = 4;
  string createTime = 5;
}

// 禁言、踢出、黑名单列表响应
message RoomOpListResp {
  repeated RoomOpListItem list = 1;
}

// 获取首页直播间列表
message ListLiveRoomsReq {
  int32 category = 1;
  int32  lastId = 2;
  int32  pageSize = 3;
}

message ListLiveRoomsItem {
  int32 id = 1; // 直播间id
  string name = 2; // 直播间名称
  string cover = 3; // 直播间封面
  string countryCode = 4; // 国家code
  int32 onlineNum = 5; // 在线人数
  int32 userId = 6; // 主播id
  string chatRoomId = 7; // 聊天室id
  int32 status = 8; // 房间状态 1-正常  2-禁用 3-删除
}

message ListLiveRoomsResp {
  repeated ListLiveRoomsItem list = 1;
}

// 搜索主播
message SearchAnchorReq {
  string nickname = 1; // 搜索主播昵称
  int32  lastId = 2;
  int32  pageSize = 3;
}

message SearchAnchorItem {
  int32 userId = 1;
  string countryCode = 2;
  string  avatar = 3;
  string  nickname = 4;
  int32  category = 5; // 类型 1-用户 2-主播 3-机器人
  int32 status = 6; // 账号状态 1-正常 2-禁用 3-删除
  string chatUUID = 7; // 聊天室uuid
  int32  levelId = 8; // 等级id
  string sign = 9; // 签名
  int32 sex = 10; // 性别 1-男 2-女
  int32 setLevelId = 11; // 后台设置等级
}

message SearchAnchorResp {
  repeated SearchAnchorItem list = 1;
}

// 直播间详情
message LiveRoomsDetailsReq {
  int32 roomId = 1;
  int32 userId = 2;
}

message LiveRoomsDetailsResp {
  int32 Id = 1; // 直播间id
  string name = 2; // 直播间名称
  string cover = 3; // 直播间封面
  string countryCode = 4; // 国家code
  int32 onlineNum = 5; // 在线人数
  int32 userId = 6; // 主播id
  string chatRoomId = 7; // 聊天室id
  int32 status = 8; // 房间状态 1-正常  2-禁用 3-删除
  int32 liveStatus = 9; // 直播状态 1-直播 2-下播
  int32  payRules = 10; // 付费规则 1- 免费 2-分钟付费 3-场次付费
  int32  trialDuration = 11; // 试看时长/秒
  int32  unitPrice = 12; // 单价 每分钟单价/每场单价，根据付费规则
}

message CloseBroadcastResp {
  int32 liveDuration = 1; // 直播时长
  int32 viewersNum = 2; // 观看人数
  int32 giftAmount = 3; // 收到礼物金额 /钻石
  int32 followerNum = 4; // 收到关注数量
  int32 likeNum = 5; // 收到点赞数量
  int32 roomId = 6;
  string chatRoomId = 7;
}
